src/test/ui/enum-discriminant/arbitrary_enum_discriminant-no-repr.stderr
error[E0732]: `#[repr(inttype)]` must be specified
  --> $DIR/arbitrary_enum_discriminant-no-repr.rs:2:1
   |
LL | / enum Enum {
LL | |
LL | |     Unit = 5,
LL | |     Tuple(u8) = 3,
...  |
LL | |     } = 1,
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0732`.
