src/test/ui/enum-discriminant/arbitrary_enum_discriminant-no-repr.rs
#![crate_type = "lib"]
enum Enum {
    //~^ ERROR `#[repr(inttype)]` must be specified
    Unit = 5,
    Tuple(u8) = 3,
    Struct {
        foo: u16
    } = 1,
}
